--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -11,4 +11,4 @@ javafx.run.as=standalone
 javafx.run.inbrowser=<Default System Browser>
 javafx.run.inbrowser.path=C:\\Program Files\\Internet Explorer\\IEXPLORE.EXE
 jlink.strip=false
-user.properties.file=C:\\Users\\souso\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\Ryaan\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
